--- a/sandbox/css/sandbox.css
+++ b/sandbox/css/sandbox.css
@@ -1,15 +1,13 @@
 body{
-  margin: 20px;
+  margin-left: 20px;
 }
 
 .boxed{
   border-color: #bbb;
-  border-width: 2px;
+  border-width: 1px;
   border-style: solid;
-  margin: 15px;
-  padding: 5px;
-  background-color: #eee;
-  float: left;
+  padding: 3px;
+  background-color: #ddd;
 }
 
 .key{
@@ -21,18 +19,19 @@ body{
   -webkit-box-shadow: 2px 4px 4px #888;
   box-shadow: 2px 4px 4px #888;
   background-color: #f9f9f9;
-  background-image: -moz-linear-gradient(top, #eee, #f9f9f9, #eee);
+/*  background-image: -moz-linear-gradient(top, #eee, #f9f9f9, #eee);
   background-image: -ms-linear-gradient(top, #eee, #f9f9f9, #eee);
   background-image: -o-linear-gradient(top, #eee, #f9f9f9, #eee);
   background-image: -webkit-linear-gradient(top, #eee, #f9f9f9, #eee);
   background-image: linear-gradient(top, #eee, #f9f9f9, #eee);
-  padding: 3px 7px;
-  font-family: inherit;
-  font-size: 0.85em;
-  width: 35px;
+*/  padding: 2px 9px;
+  font-family: sans-serif;
+  font-size: 24px;
+  font-weight: bold;
   text-align: center;
   margin: 5px 7px;
   float: left;
+  min-width: 46px;
 }
 
 .key-box-container{
