--- a/sandbox/css/sandbox.css
+++ b/sandbox/css/sandbox.css
@@ -19,12 +19,7 @@ body{
   -webkit-box-shadow: 2px 4px 4px #888;
   box-shadow: 2px 4px 4px #888;
   background-color: #f9f9f9;
-/*  background-image: -moz-linear-gradient(top, #eee, #f9f9f9, #eee);
-  background-image: -ms-linear-gradient(top, #eee, #f9f9f9, #eee);
-  background-image: -o-linear-gradient(top, #eee, #f9f9f9, #eee);
-  background-image: -webkit-linear-gradient(top, #eee, #f9f9f9, #eee);
-  background-image: linear-gradient(top, #eee, #f9f9f9, #eee);
-*/  padding: 2px 9px;
+  padding: 2px 9px;
   font-family: sans-serif;
   font-size: 24px;
   font-weight: bold;
